# air_fobulous_2040

./: .gitignore  CMakeLists.txt  README.md
src/: air_fobulous.c  blue_led_task.c  bme68x_task.c  neopixel_task.c  print_task.c  sdcard_log_task.c
src/bme68x/: bsec_integration.c  bsec_integration.h  bsec_selectivity.c  bsec_selectivity.h  common.c  common.h
src/include/: FreeRTOSConfig.h  blue_led_task.h  bme68x_task.h  neopixel_task.h  print_task.h  sdcard_log_task.h  utils.h
